--- a/experiments/model_a_eval/requirements.txt
+++ b/experiments/model_a_eval/requirements.txt
@@ -1,14 +1,36 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.2.0
+async-timeout==4.0.3
+attrs==23.2.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+distro==1.9.0
+exceptiongroup==1.2.0
+flake8==7.0.0
+frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 idna==3.6
 joblib==1.3.2
+mccabe==0.7.0
+multidict==6.0.4
 nltk==3.8.1
+openai==0.28.0
 prettytable==3.9.0
+pycodestyle==2.11.1
+pydantic==2.5.3
+pydantic-core==2.14.6
+pyflakes==3.2.0
 regex==2023.12.25
 requests==2.31.0
+sniffio==1.3.0
 SpeechRecognition==3.10.1
 tqdm==4.66.1
 typing-extensions==4.9.0
 urllib3==2.1.0
 wcwidth==0.2.13
+yarl==1.9.4
