--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cockatoo-ai"
 version = "0.1.0"
 description = "An exclusive language trainer for you to help escalate your language to next level with joy and fun."
-authors = ["Wen-Kai Chung <wkaichungtw@gmail.com>", "John Lee <puremonkey2007@gmail.com>", "Louis <louis120913@gmail.com>", "Demmi Yu cicada2205@gmail.com"]
+authors = ["Wen-Kai Chung <wkaichungtw@gmail.com>", "John Lee <puremonkey2007@gmail.com>", "Louis <louis120913@gmail.com>", "Demmi Yu <yuchaodemmi@gmail.com>"]
 license = "Apache 2.0"
 readme = "README.md"
 packages = [
@@ -14,7 +14,6 @@ packages = [
 python = "^3.12"
 pandas = "^2.1.4"
 numpy = "^1.26.3"
-
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^7.2.6"
