add scipy and sounddevice package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 pandas = "^2.1.4"
 numpy = "^1.26.3"
+sounddevice = "^0.4.6"
+scipy = "^1.13.0"
 
 
 [tool.poetry.group.dev.dependencies]
