--- a/experiments/model_a_eval/requirements.txt
+++ b/experiments/model_a_eval/requirements.txt
@@ -50,13 +50,20 @@ frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.42
+google-ai-generativelanguage==0.6.9
+google-api-core==2.19.2
+google-api-python-client==2.145.0
 google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.1
 google-search-results==2.4.2
 googleapis-common-protos==1.63.0
 greenlet==3.0.3
-grpcio==1.62.1
+grpcio==1.66.1
+grpcio-status==1.62.3
 h11==0.14.0
 httpcore==1.0.2
+httplib2==0.22.0
 httptools==0.6.1
 httpx==0.26.0
 huggingface-hub==0.22.2
@@ -91,10 +98,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.1
 jupyterlab_widgets==3.0.10
 kubernetes==29.0.0
-langchain==0.2.12
-langchain-chroma==0.1.0
-langchain-community==0.0.38
-langchain-core==0.2.28
+langchain-core==0.2.38
 langchain-openai==0.1.20
 langchain-text-splitters==0.2.2
 langsmith==0.1.96
@@ -160,6 +164,7 @@ posthog==3.5.0
 prettytable==3.9.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+proto-plus==1.24.0
 protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
@@ -173,9 +178,11 @@ pycparser==2.22
 pydantic==2.5.3
 pydantic_core==2.14.6
 pydeck==0.8.1b0
+pydub==0.25.1
 pyflakes==3.2.0
 Pygments==2.17.2
 pylint==3.0.3
+pyparsing==3.1.4
 pypdf==4.0.2
 PyPika==0.48.9
 pyproject_hooks==1.0.0
@@ -236,6 +243,7 @@ typing_extensions==4.9.0
 tzdata==2024.1
 tzlocal==5.2
 uri-template==1.3.0
+uritemplate==4.1.1
 urllib3==2.1.0
 uvicorn==0.29.0
 uvloop==0.19.0
